feat: upload only docs folder

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,7 +39,9 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: "."
+          # path: "."
+          # Upload specific directory
+          path: "docs"
 
       - name: Deploy to GitHub Pages
         id: deployment
